gts-macros/tests/compile_fail/missing_description.rs
//! Test: Missing required attribute description

use gts_macros::struct_to_gts_schema;

#[struct_to_gts_schema(
    dir_path = "schemas",
    base = true,
    schema_id = "gts.x.app.entities.user.v1~",
    properties = "id"
)]
pub struct User {
    pub id: String,
}

fn main() {}
