gts-macros/tests/compile_fail/missing_description.stderr
error: unexpected end of input, Missing required attribute: description
  --> tests/compile_fail/missing_description.rs:5:1
   |
 5 | / #[struct_to_gts_schema(
 6 | |     dir_path = "schemas",
 7 | |     base = true,
 8 | |     schema_id = "gts.x.app.entities.user.v1~",
 9 | |     properties = "id"
10 | | )]
   | |__^
   |
   = note: this error originates in the attribute macro `struct_to_gts_schema` (in Nightly builds, run with -Z macro-backtrace for more info)
